# igl-sandbox

./: .gitmodules  CMakeLists.txt  README.md
libpg/: CMakeLists.txt
libpg/include/: libpg.h  triangle.h
libpg/src/: libpg.cpp  triangle.cpp
pg/: CMakeLists.txt
pg/src/: main.cpp
